# mocap

./: README.md
src/main/cpp/cuda/: CMakeLists.txt  CudaEvent.cuh  CudaTest.cu  CudaTest.cuh  main.cpp
src/main/cpp/server/: cuda.grpc.pb.cc  cuda.grpc.pb.h
src/main/glsl/Default/: fragment.glsl  vertex.glsl
src/main/java/: Main.java
src/main/java/Animation/Animator/: Anim.java  Animator.java  AnimatorModel.java  Joint.java  KeyFrame.java  SimpleJoint.java
src/main/java/Animation/Utils/: AnimShader.java
src/main/java/Camera/: Camera.java
src/main/java/CudaCompute/: CudaCompute.java  CudaComputeServiceGrpc.java
src/main/java/Handler/: Frame.java  JointHandler.java  VideoProcessor.java
src/main/java/MyMath/: Matrix.java  Quaternion.java  Vector.java
src/main/java/Parser/ParserDAE/: DataStructures.java  GeometryParser.java  ParserDAE.java  SkeletonParser.java  SkinLoader.java
src/main/java/Parser/ParserXML/: NodeXML.java  ParserXML.java
src/main/java/Render/: Render.java
src/main/java/Render/Buffer/: Buffer.java  IndexBuffer.java  VertexArray.java  VertexBuffer.java
src/main/java/Render/Primitive/: BasicPrimitive.java  Primitive.java
src/main/java/Render/Shader/: Shader.java
src/main/proto/: cuda_compute.proto
